rtg_tests/negative/main_method/cmd/app/main.go
package main

type application struct{}

func (application) main() {}
